--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 .button {
   background-color: #fca311;
-  color: #ffffff;
+  color: #fbf8f8;
   text-decoration: none;
   padding: 5px;
   border-radius: 5px;
