--- a/style.css
+++ b/style.css
@@ -9,11 +9,54 @@ body {
   color: #fca311;
   padding: 20px 20px 30px;
 }
-.headder {
-  background-color: #e5e5e5;
-}
 .footer {
-  background-color: #e5e5e5;
+  background-color: #101010;
+}
+.header {
+  width: 100%;
+  height: 80px;
+  display: block;
+  background-color: #101010;
+}
+.inner_header {
+  width: 1000px;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+.logo_container{
+  height: 100%;
+  display: table;
+  float: left;
+}
+.logo_container h1 {
+  color: #ffffff;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  font-family: 'Montserrat';
+  font-size: 32px;
+}
+.logo_container h1 span{
+  font-weight: 800;
+}
+.navigation {
+  float: right;
+  height: 100%;
+}
+.navigation a{
+  height: 100%;
+  display: table;
+  float: left;
+  padding: 0px 20px;
+}
+.navigation a li{
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
+  color: #ffffff;
+  font-family: 'Montserrat';
+  font-size: 16px;
 }
 .foto {
   border-radius: 19% 1% 19%;
