--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
   color: #fca311;
   padding: 20px 20px 30px;
 }
-.footer {
-  background-color: #101010;
-}
 .header {
   width: 100%;
   height: 80px;
@@ -24,7 +21,7 @@ body {
   display: block;
   margin: 0 auto;
 }
-.logo_container{
+.logo_container {
   height: 100%;
   display: table;
   float: left;
@@ -34,28 +31,28 @@ body {
   height: 100%;
   display: table-cell;
   vertical-align: middle;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 32px;
 }
-.logo_container h1 span{
+.logo_container h1 span {
   font-weight: 800;
 }
 .navigation {
   float: right;
   height: 100%;
 }
-.navigation a{
+.navigation a {
   height: 100%;
   display: table;
   float: left;
   padding: 0px 20px;
 }
-.navigation a li{
+.navigation a li {
   display: table-cell;
   vertical-align: middle;
   height: 100%;
   color: #ffffff;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 16px;
 }
 .foto {
@@ -99,9 +96,9 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .aling {
-display: block;
-width: 290px;
-margin: 5px auto;
+  display: block;
+  width: 290px;
+  margin: 5px auto;
 }
 p,
 li {
