alteração nas cores

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   float: left;
 }
 .logo_container h1 {
-  color: #ffffff;
+  color: white;
   height: 100%;
   display: table-cell;
   vertical-align: middle;
